# ban-binance-bot

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  config.toml
src/: bot.rs  config.rs  main.rs  state.rs  traits.rs
src/scanner/: file.rs  image.rs  mod.rs  text.rs  url.rs
src/util/: download.rs  future.rs  image.rs  mod.rs  telegram.rs  url.rs  video.rs
