[package]
name = "ban-binance-bot"
description = "A Telegram bot to ban users advertising Binance promotions."
version = "0.1.0"
authors = ["timvisee <tim@visee.me>"]
edition = "2018"
homepage = "https://gitlab.com/timvisee/ban-binance-bot"
repository = "https://gitlab.com/timvisee/ban-binance-bot"
keywords = ["telegram-bot", "spam-filtering"]
readme = "README.md"
license = "GPL-3.0"

[badges]
gitlab = { repository = "timvisee/ban-binance-bot", branch = "master" }

[dependencies]
dotenv = "0.14"
dssim = "2.9"
futures = "0.1"
image = "0.22"
imgref = "1.4"
lazy_static = "1.4"
linkify = "0.4"
reqwest = "0.9"
rgb = "0.8"
tempfile = "3.1"
tokio-core = "0.1"
tokio-fs = "0.1"
tokio-io = "0.1"
tokio-signal = "0.2"
url = "1.2"

# Use a specific version with patched Telegram bot API
[dependencies.telegram-bot]
version = "*"
git = "https://github.com/telegram-rs/telegram-bot"
rev = "d82b179"
