[package]
name = "ban-binance-bot"
description = "A Telegram bot to ban users advertising Binance promotions."
version = "0.2.0"
authors = ["timvisee <tim@visee.me>"]
edition = "2018"
homepage = "https://gitlab.com/timvisee/ban-binance-bot"
repository = "https://gitlab.com/timvisee/ban-binance-bot"
keywords = ["telegram-bot", "spam-filtering"]
readme = "README.md"
license = "GPL-3.0"

[badges]
gitlab = { repository = "timvisee/ban-binance-bot", branch = "master" }

[features]
default = ["ocr"]
ocr = ["leptess"]

[dependencies]
dotenv = "0.14"
dssim = "2.9"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
image = "0.22"
imgref = "1.4"
lazy_static = "1.4"
linkify = "0.4"
num_cpus = "1.0"
rgb = "0.8"
tempfile = "3.1"
tokio = "0.2.0-alpha.5"
tokio-fs = "0.2.0-alpha.5"
tokio-io = "0.2.0-alpha.5"
url = "2.1"

leptess = { version = "0.6", optional = true }

[dependencies.telegram-bot]
version = "*"
git = "https://github.com/telegram-rs/telegram-bot"
rev = "9061ff8"

[dependencies.reqwest]
version = "0.10.0-alpha.0"
git = "https://github.com/seanmonstar/reqwest"
rev = "5b55aee"
