[package]
name = "ban-binance-bot"
description = "A Telegram bot to ban users advertising Binance promotions."
version = "0.2.0"
authors = ["timvisee <tim@visee.me>"]
edition = "2018"
homepage = "https://gitlab.com/timvisee/ban-binance-bot"
repository = "https://gitlab.com/timvisee/ban-binance-bot"
keywords = ["telegram-bot", "spam-filtering"]
readme = "README.md"
license = "GPL-3.0"

[badges]
gitlab = { repository = "timvisee/ban-binance-bot", branch = "master" }

[features]
default = ["ffmpeg", "ocr", "sentry"]
ffmpeg = ["tokio/process"]
ocr = ["leptess"]

[dependencies]
dotenv = "0.14"
dssim = "2.9"
env_logger = "0.7"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
image = "0.22"
imgref = "1.4"
lazy_static = "1.4"
leptess = { version = "0.7.4", optional = true }
log = "0.4"
num_cpus = "1"
regex = "1"
reqwest = "0.10.0-alpha.1"
rgb = "0.8"
sentry = { version = "0.17", optional = true }
tempfile = "3.1"
tokio = "0.2.0-alpha.6"
tokio-executor = "0.2.0-alpha.6"
took = "0.1"
url = "2.1"

# Used for workaround until reqwest panic is fixed
# Issue: https://github.com/seanmonstar/reqwest/issues/668
hyper = { version = "0.13.0-alpha.4", default-features = false, features = ["tcp"] }

[dependencies.telegram-bot]
version = "0.7.0-alpha.0"
git = "https://github.com/telegram-rs/telegram-bot"
rev = "3c0babc"
